--- a/src/html/section.html
+++ b/src/html/section.html
@@ -7,20 +7,20 @@
                 <img class="track__poster" src="images/foto1.jpg" alt="Save your tears" width="180" height="180">
             </div>
 
-            <div class="track__info">
-                <p class="track__title">Save Your Tears</p>
-                <p class="track__artist">The Weekend</p>
+            <div class="track__info track-info">
+                <p class="track-info__title">Save Your Tears</p>
+                <p class="track-info__artist">The Weekend</p>
             </div>
         </button>
 
-        <button class="catalog__item track">
+        <button class="catalog__item track track--active">
             <div class="track__img-wrap">
                 <img class="track__poster" src="images/foto2.jpg" alt="Follow You" width="180" height="180">
             </div>
 
-            <div class="track__info">
-                <p class="track__title">Follow You</p>
-                <p class="track__artist">Imagine Dragons</p>
+            <div class="track__info track-info">
+                <p class="track-info__title">Follow You</p>
+                <p class="track-info__artist">Imagine Dragons</p>
             </div>
         </button>
 
@@ -29,9 +29,9 @@
                 <img class="track__poster" src="images/foto3.jpg" alt="Dirt Femme" width="180" height="180">
             </div>
 
-            <div class="track__info">
-                <p class="track__title">Dirt Femme</p>
-                <p class="track__artist">How Long</p>
+            <div class="track__info track-info">
+                <p class="track-info__title">Dirt Femme</p>
+                <p class="track-info__artist">How Long</p>
             </div>
         </button>
 
@@ -40,9 +40,9 @@
                 <img class="track__poster" src="images/foto4.jpg" alt="Another Love" width="180" height="180">
             </div>
 
-            <div class="track__info">
-                <p class="track__title">Another Love</p>
-                <p class="track__artist">Tom Odell</p>
+            <div class="track__info track-info">
+                <p class="track-info__title">Another Love</p>
+                <p class="track-info__artist">Tom Odell</p>
             </div>
         </button>
 
@@ -51,9 +51,9 @@
                 <img class="track__poster" src="images/foto5.jpg" alt="Born to Die" width="180" height="180">
             </div>
 
-            <div class="track__info">
-                <p class="track__title">Born to Die</p>
-                <p class="track__artist">Lana Del Rey</p>
+            <div class="track__info track-info">
+                <p class="track-info__title">Born to Die</p>
+                <p class="track-info__artist">Lana Del Rey</p>
             </div>
         </button>
 
@@ -66,6 +66,12 @@
                 <p class="track-info__title">Hello</p>
                 <p class="track-info__artist">Adele</p>
             </div>
+        </button>
+        <button class="catalog__btn-add">
+            <span>Увидеть все</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.59 16.59L13.17 12L8.59 7.41L10 6L16 12L10 18L8.59 16.59Z" />
+            </svg>
         </button>
     </div>
 </section>
