--- a/src/html/section.html
+++ b/src/html/section.html
@@ -78,7 +78,7 @@
 <section class="player player--active">
     <h2 class="visually-hidden">Плеер</h2>
     <div class="player__container">
-        <div class="player__track-info track-info">
+        <div class="player__track-info track-info track-info--mobile-center">
             <p class="track-info__title">Follow You</p>
             <p class="track-info__artist">Imagine Dragon</p>
         </div>
@@ -95,7 +95,7 @@
             <button class="player__icon player__icon-next"></button>
             <button class="player__icon player__icon-like"></button>
         </div>
-        <div class="player__progress--wrap">
+        <div class="player__progress-wrap">
             <div class="player__progress">
                 <input class="player__progress--input" type="range" min="0" max="100" value="0">
             </div>
@@ -106,7 +106,7 @@
             </p>
         </div>
 
-        <div class="player__volume--wrap">
+        <div class="player__volume-wrap">
             <div class="player__volume">
                 <input class="player__volume-input" type="range" min="0" max="100" value="100">
             </div>
