--- a/src/html/head.html
+++ b/src/html/head.html
@@ -4,10 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.min.css">
 
+  <script src="js/app.min.js" defer></script>
+
   <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="images/icons/safari-pinned-tab.svg" color="#ff001b">
   <meta name="msapplication-TileColor" content="#ff001b">
   <meta name="theme-color" content="#ff001b">
