--- a/src/html/section.html
+++ b/src/html/section.html
@@ -2,7 +2,7 @@
     <h2 class="visually-hidden">Список треков</h2>
 
     <div class="catalog__container">
-        <button class="catalog__item track">
+        <button class="catalog__item track" data-track="audio/The Weeknd - Save Your Tears.mp3">
             <div class="track__img-wrap">
                 <img class="track__poster" src="images/foto1.png" alt="Save your tears" width="180" height="180">
             </div>
@@ -12,7 +12,7 @@
             </div>
         </button>
 
-        <button class="catalog__item track track--active">
+        <button class="catalog__item track" data-track="audio/Imagine Dragons - Follow you.mp3">
             <div class="track__img-wrap">
                 <img class="track__poster" src="images/foto2.png" alt="Follow You" width="180" height="180">
             </div>
@@ -23,7 +23,7 @@
             </div>
         </button>
 
-        <button class="catalog__item track">
+        <button class="catalog__item track" data-track="audio/Tove Lo - How Long.mp3">
             <div class="track__img-wrap">
                 <img class="track__poster" src="images/foto3.png" alt="Dirt Femme" width="180" height="180">
             </div>
@@ -75,7 +75,7 @@
     </div>
 </section>
 
-<section class="player player--active">
+<section class="player">
     <h2 class="visually-hidden">Плеер</h2>
     <div class="player__container">
         <div class="player__track-info track-info track-info--mobile-center">
