--- a/src/html/section.html
+++ b/src/html/section.html
@@ -1,78 +1,7 @@
 <section class="catalog">
     <h2 class="visually-hidden">Список треков</h2>
 
-    <div class="catalog__container">
-        <button class="catalog__item track" data-track="audio/The Weeknd - Save Your Tears.mp3">
-            <div class="track__img-wrap">
-                <img class="track__poster" src="images/foto1.png" alt="Save your tears" width="180" height="180">
-            </div>
-            <div class="track__info track-info">
-                <p class="track-info__title">Save Your Tears</p>
-                <p class="track-info__artist">The Weekend</p>
-            </div>
-        </button>
-
-        <button class="catalog__item track" data-track="audio/Imagine Dragons - Follow you.mp3">
-            <div class="track__img-wrap">
-                <img class="track__poster" src="images/foto2.png" alt="Follow You" width="180" height="180">
-            </div>
-
-            <div class="track__info track-info">
-                <p class="track-info__title">Follow You</p>
-                <p class="track-info__artist">Imagine Dragons</p>
-            </div>
-        </button>
-
-        <button class="catalog__item track" data-track="audio/Tove Lo - How Long.mp3">
-            <div class="track__img-wrap">
-                <img class="track__poster" src="images/foto3.png" alt="Dirt Femme" width="180" height="180">
-            </div>
-
-            <div class="track__info track-info">
-                <p class="track-info__title">Dirt Femme</p>
-                <p class="track-info__artist">How Long</p>
-            </div>
-        </button>
-
-        <button class="catalog__item track">
-            <div class="track__img-wrap">
-                <img class="track__poster" src="images/foto4.png" alt="Another Love" width="180" height="180">
-            </div>
-
-            <div class="track__info track-info">
-                <p class="track-info__title">Another Love</p>
-                <p class="track-info__artist">Tom Odell</p>
-            </div>
-        </button>
-
-        <button class="catalog__item track">
-            <div class="track__img-wrap">
-                <img class="track__poster" src="images/foto5.png" alt="Born to Die" width="180" height="180">
-            </div>
-
-            <div class="track__info track-info">
-                <p class="track-info__title">Born to Die</p>
-                <p class="track-info__artist">Lana Del Rey</p>
-            </div>
-        </button>
-
-        <button class="catalog__item track">
-            <div class="track__img-wrap">
-                <img class="track__poster" src="images/foto6.png" alt="Hello" width="180" height="180">
-            </div>
-
-            <div class="track__info track-info">
-                <p class="track-info__title">Hello</p>
-                <p class="track-info__artist">Adele</p>
-            </div>
-        </button>
-        <button class="catalog__btn-add">
-            <span>Увидеть все</span>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8.59 16.59L13.17 12L8.59 7.41L10 6L16 12L10 18L8.59 16.59Z" />
-            </svg>
-        </button>
-    </div>
+    <div class="catalog__container"></div>
 </section>
 
 <section class="player">
